--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,9 @@ env:
 jobs:
   run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ '1.20', '1.21', '1.22' ]
 
     steps:
       - name: Checkout code
@@ -20,7 +23,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v3
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ matrix.go }}
 
       - name: Go Format
         run: gofmt -s -w . && git diff --exit-code
@@ -39,6 +42,7 @@ jobs:
 
       - name: Install govulncheck
         run: go install golang.org/x/vuln/cmd/govulncheck@latest
+
       - name: Run govulncheck
         run: govulncheck ./...
 
