--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,21 +7,21 @@ on:
     branches: [ main ]
 
 env:
-  GO_VERSION: 1.20.6
+  GO_VERSION: stable
 
 jobs:
   run:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: [ '1.20', '1.21', '1.22' ]
+        go: [ stable, oldstable ]
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go }}
 
@@ -35,7 +35,7 @@ jobs:
         run: go test -v -race ./...
 
       - name: Lint
-        uses: golangci/golangci-lint-action@v3.2.0
+        uses: golangci/golangci-lint-action@v6
         with:
           version: latest
           args: --timeout 5m
@@ -44,10 +44,10 @@ jobs:
     needs: run
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Install Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
 
@@ -58,10 +58,10 @@ jobs:
     needs: run 
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Install Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION }}
 
